# ai-indexed-image-gallery

./: .claudeignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  flutter_rust_bridge.yaml  pubspec.yaml
.misc/: MODEL_ONNX_EXPORT_GUIDE.md  SESSION_PLAYBOOK.md  error.log.txt  ort_runtime_binary_install.sh
android/app/: build.gradle.kts
assets/models/: mobilefacenet_int8.onnx  yolov8n_int8.onnx
docs/: clustering.md  models.md  pipeline.md  rust_to_flutter_onnx_migration_plan.md  schema.md  search.md  skeleton.md  stack.md  ui-spec.md
ios/: Podfile
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: api.dart  app.dart  app_startup.dart  frb_generated.dart  main.dart
lib/core/: AGENTS.md  CLAUDE.md
lib/router/: app_router.dart
lib/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/services/: AGENTS.md  CLAUDE.md  (+2 more)
rust/: CLAUDE.md  Cargo.toml
rust/src/: api.rs  frb_generated.rs  lib.rs
rust/src/features/: mod.rs
rust/src/features/clip/: clip_inference.rs  clip_preprocess.rs  clip_session.rs  mod.rs
rust/src/features/detection/: detection_inference.rs  detection_nms.rs  detection_preprocess.rs  detection_session.rs  detection_types.rs  mod.rs  types.rs
rust/src/features/emotion/: emotion_inference.rs  emotion_preprocess.rs  emotion_session.rs  mod.rs  types.rs
rust/src/features/face/: face_inference.rs  face_preprocess.rs  face_session.rs  mod.rs
rust/src/shared/: bbox.rs  mod.rs  phash.rs
rust/src/shared/utils/: phash.rs
rust_builder/: pubspec.yaml
(+86 files in other folders)
