[package]
name = "rust_lib_ai_gallery"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
image = "0.25"
rayon = "1.10"
once_cell = "1.19"
ndarray = "0.16"
tokenizers = ">=0.19"
